Added code for getting the reverse complement DNA seqeunce

--- a/code/Practice_with_Python.ipynb
+++ b/code/Practice_with_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPWiaHKC1MqtuvNieKUW6m",
+      "authorship_tag": "ABX9TyMIC5qN76yyDrfpdUVOdeLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,8 +83,7 @@
         "  print(num1 / num2)\n",
         "else:\n",
         " print(\"Invalid Operation\")\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -93,7 +92,7 @@
         "id": "SgmwfwMv3887",
         "outputId": "48903446-aacf-448c-cbdb-7552b365ebc9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +132,7 @@
         "id": "0YhLsyhN9Ryq",
         "outputId": "b67f2edc-22d6-423e-c903-eaddc0939c74"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,6 +152,50 @@
             "One day while Honey was working, they pooped.\n",
             "This caused everyone to bark.\n",
             "Honey was immediately terrified.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def complement_seqence(reverse_seq):\n",
+        "  complement = {\"A\":\"T\", \"T\":\"A\", \"G\":\"C\", \"C\":\"G\", \"a\":\"t\", \"t\":\"a\", \"g\":\"c\", \"c\":\"g\"}\n",
+        "  complement_seq = \"\"\n",
+        "  for nucleotide in reverse_seq:\n",
+        "    complement_nucleotide = complement[nucleotide]\n",
+        "    complement_seq += complement_nucleotide\n",
+        "\n",
+        "  return complement_seq\n",
+        "\n",
+        "def reverse(DNA_seq):\n",
+        "  reverse_seq = \"\"\n",
+        "  for nucleotide in DNA_seq:\n",
+        "    reverse_seq = nucleotide + reverse_seq\n",
+        "\n",
+        "  return reverse_seq\n",
+        "\n",
+        "DNA_seq = input(\"Enter DNA Sequence:\")\n",
+        "print(complement_seqence(reverse(DNA_seq)))\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "HSIEkwugXQ4g",
+        "outputId": "08d5bf93-5356-4341-e190-3d78fc1d8ad8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter DNA Sequence:gggggatctggagctctcgaGacc\n",
+            "ggtCtcgagagctccagatccccc\n"
           ]
         }
       ]
